@@ -161,13 +161,13 @@ namespace PloppableRICO
             }
 
             // Set background - plain if this is a thumbnail and the 'skybox' option isn't selected.
-            if (isThumb && Settings.thumbBacks != (byte)Settings.ThumbBackCats.skybox)
+            if (isThumb && ModSettings.thumbBacks != (byte)ModSettings.ThumbBackCats.skybox)
             {
                 // Is a thumbnail - user plain-colour background.
                 renderCamera.clearFlags = CameraClearFlags.Color;
 
                 // Set dark sky-blue background colour if the default 'color' background is set
-                if (Settings.thumbBacks == (byte)Settings.ThumbBackCats.color)
+                if (ModSettings.thumbBacks == (byte)ModSettings.ThumbBackCats.color)
                 {
                     renderCamera.backgroundColor = new Color32(33, 151, 199, 255);
                 }
