@@ -19,7 +19,7 @@ namespace PloppableRICO
 		private static bool Prefix(ref PrivateBuildingAI __instance, ushort buildingID, ref Building data, uint version)
 		{
 			// Don't do anything if the flag isn't set.
-			if (!Settings.resetOnLoad)
+			if (!ModSettings.resetOnLoad)
             {
 				// Carry on to original method.
 				return true;
